# template-nix-sail

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
.ptpython/: config.py
resources/: ciudades_espana.csv
src/: calculator.py  dataframes.py  main.py
src/streaming/: __init__.py
src/streaming/redpanda/: __init__.py  consumer.py  consumer_simple.py  producer.py
tests/: conftest.py  test_calculator.py  test_dataframes.py  test_dataframes_pysail.py
